# Lyra_Music

./: .env.example  .gitignore  Cargo.toml  playback_controls.rs  search_bar.rs
src/: main.rs
src/audio/: decoder.rs  discord.rs  engine.rs  engine_state.rs  manager.rs  mod.rs  mpris.rs  radio_daemon.rs  track_event.rs
src/audio/errors/: decode_error.rs
src/microservices/: client.rs
src/model/: album.rs  artist.rs  audio_tech.rs  mod.rs  track.rs  track_state.rs
src/ui/: mod.rs  playback_controls.rs  search_bar.rs
src/ui/playback_feature/: mod.rs  playback_feature.rs  player.rs  queue_panel.rs  volume.rs
src/ui/search_feature/: mod.rs  search_bar.rs  search_feature.rs
src/ui/styles/: styles.rs
src/ui/utils/: image.rs  mod.rs  thumbnail_cache.rs
src/ui/widgets/: async_thumbnail.rs  icon_toggle.rs  mod.rs  track_row.rs
